--- a/pc/docker-compose.yml
+++ b/pc/docker-compose.yml
@@ -1,8 +1,8 @@
 include:
 #  - path: media/docker-compose.yml
-  - path: images/docker-compose.yml
+#  - path: images/docker-compose.yml
   - path: gaming/docker-compose.yml
-  - path: management/docker-compose.yml
+#  - path: management/docker-compose.yml
 
 # network definition
 networks:
