uncomment management docker-compose path and comment out cadvisor service

--- a/pc/management/docker-compose.yml
+++ b/pc/management/docker-compose.yml
@@ -14,21 +14,21 @@ services:
     networks:
       - net
 
-  cadvisor:
-    image: gcr.io/cadvisor/cadvisor:latest
-    container_name: cadvisor
-    restart: unless-stopped
-    labels:
-      glance.name: cadvisor
-      glance.icon: di:cadvisor
-      glance.description: docker container stat tracking application
-      glance.category: management   
-    ports:
-      - "8228:8080"
-    volumes:
-      - /:/rootfs:ro
-      - /var/run:/var/run:ro
-      - /sys:/sys:ro
-      - /var/lib/docker/:/var/lib/docker:ro
-    networks:
-      - net
+  # cadvisor:
+  #   image: gcr.io/cadvisor/cadvisor:latest
+  #   container_name: cadvisor
+  #   restart: unless-stopped
+  #   labels:
+  #     glance.name: cadvisor
+  #     glance.icon: di:cadvisor
+  #     glance.description: docker container stat tracking application
+  #     glance.category: management   
+  #   ports:
+  #     - "8228:8080"
+  #   volumes:
+  #     - /:/rootfs:ro
+  #     - /var/run:/var/run:ro
+  #     - /sys:/sys:ro
+  #     - /var/lib/docker/:/var/lib/docker:ro
+  #   networks:
+  #     - net
