--- a/pc/docker-compose.yml
+++ b/pc/docker-compose.yml
@@ -2,7 +2,7 @@ include:
 #  - path: media/docker-compose.yml
   - path: images/docker-compose.yml
   - path: gaming/docker-compose.yml
-#  - path: management/docker-compose.yml
+  - path: management/docker-compose.yml
 
 # network definition
 networks:
