--- a/rpi/music/docker-compose.yml
+++ b/rpi/music/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     volumes:
       - /home/m3v/shared/rpi-docker/data/navidrome:/data
       - /home/m3v/shared/rpi-docker/media/music:/music:ro
+      - /mnt/m3vmain-media/music:/m3vmain-music:ro
     ports:
       - 4533:4533
     networks:
