--- a/pc/management/docker-compose.yml
+++ b/pc/management/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   watchtower:
-    image: containrrr/watchtower:latest
+    image: containrrr/watchtower
     container_name: watchtower
     restart: unless-stopped
     labels:
@@ -11,6 +11,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     command: --interval 300 --cleanup
+    environment:
+      - DOCKER_API_VERSION=1.52
     networks:
       - net
 
