refactor: rename blocky-day service to blocky and comment out unused services in docker-compose

--- a/rpi/network/docker-compose.yml
+++ b/rpi/network/docker-compose.yml
@@ -19,9 +19,9 @@ services:
     networks:
       - net
   
-  blocky-day:
+  blocky:
     image: spx01/blocky
-    container_name: blocky-day
+    container_name: blocky
     restart: unless-stopped
     hostname: blocky
     labels:
